# hfsprust

./: Cargo.toml  NOTES.md  README.md
examples/: journal-info.rs  read-chunks.rs  read-raw.rs  read.rs
hfs-types/: Cargo.toml  README.md
hfs-types-rs/: Cargo.toml
hfs-types-rs/src/: lib.rs
hfs-types/src/: lib.rs
src/: lib.rs  raw.rs
test/: volume.hexpat
