[package]
name = "hfsprust"
version = "0.1.0"
edition = "2021"
publish = false
authors = ["Thomas Johnson <NTmatter@gmail.com>"]
description = "HFS/HFS+ data structures."
keywords = ["hfs", "hfsplus"]
categories = ["filesystem"]
repository = "https://github.com/NTmatter/hfsprust.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]
maintenance = { status = "experimental" }

[dependencies]
deku = { version = "0.16.0", optional = true }
itertools = "0.10.5"
sha2 = "0.10.6"

[features]
default = ["deku"]
deku = ["dep:deku"]
