[package]
name = "hfsprust"
version = "0.1.0"
edition = "2021"
publish = false
authors = ["Thomas Johnson <NTmatter@gmail.com>"]
description = "Tools for reading (or attempting to read) damaged HFS+ volumes."
keywords = ["hfs", "hfsplus"]
categories = ["filesystem"]
repository = "https://github.com/NTmatter/hfsprust.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]
maintenance = { status = "experimental" }

[dependencies]
deku = { version = "0.16.0", optional = true }

[dev-dependencies]
itertools = "0.12.0"
memmap2 = "0.9.3"
sha2 = "0.10.8"

[features]
default = ["deku"]
deku = ["dep:deku"]
